scope name changed to session (per review comments)